# SE350Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pom.xml
.gitea/workflows/: build.yml
.github/workflows/: build.yml
backend/: README.md  pom.xml
backend/src/main/java/dev/sirnacho/se350Project/: se350ProjectApplication.java
backend/src/test/java/dev/sirnacho/se350Project/: WebApplicationTests.java
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/views/: error.vue  template.vue  test.vue
include/: appConfig.h  audioEngine.h  audioTest.h  concreteStrategies.h  pathFileHelper.h  playBackStrategy.h
src/: appConfig.cpp  audioEngine.cpp  audioTest.cpp  main  main.cpp  pathFileHelper.cpp
src/main/java/dev/sirnacho/se350Project/: se350ProjectApplication.java
src/main/java/dev/sirnacho/web/: WebApplication.java
src/test/java/dev/sirnacho/web/: WebApplicationTests.java
